# ecen390_student

./: README.md  check_and_zip.py
audio/: audio2ci.m
components/config/: hw_ltag_a.h  hw_ltag_b.h  hw_ltag_c.h
components/neo/: neo.c  neo.h
components/sound/: CMakeLists.txt  sound_i2s.c
image/: image2c_mono.m  image2c_rgb.m
ltag/: CMakeLists.txt  sdkconfig.defaults
ltag/components/c32k_16b/: CMakeLists.txt  bcFire.c  bcFire.h  clipEmpty.c  clipEmpty.h  gameBoyStartup.c  gameBoyStartup.h  gameOver.c  gameOver.h  gunEmpty.c  gunEmpty.h  ouch.c  ouch.h  pacmanDeath.c  pacmanDeath.h  powerUp.c  powerUp.h  screamAndDie.c  screamAndDie.h
ltag/components/histogram/: CMakeLists.txt  histogram.c  histogram.h
ltag/components/panel/: CMakeLists.txt  panel.c  panel.h
ltag/components/rx/: CMakeLists.txt
ltag/main/: CMakeLists.txt  buffer.h  chk.h  config.h  delay.h  detector.h  filter.h  game.h  hitLedTimer.h  invincibilityTimer.h  lockoutTimer.h  main_diag.c  main_m3t1.c  main_m3t2.c  main_m3t3.c  main_m4.c  main_m5.c  rx.h  shot.h  trigger.h  tx.h
ltag/main/test/: CMakeLists.txt  test_buffer.c  test_buffer.h  test_continuous.c  test_continuous.h  test_delay.c  test_delay.h  test_detector.c  test_detector.h  test_filter.c  test_filter.h  test_hitLedTimer.c  test_hitLedTimer.h  test_shooter.c  test_shooter.h  test_shot.c  test_shot.h  test_trigger.c  test_trigger.h  test_tx.c  test_tx.h
test_net/: CMakeLists.txt
test_net/main/: main_v1.c  main_v2.c
